# rhealpixdggs-py

./: .gitignore  CHANGES.rst  CITATION.CFF  LICENSE  LICENSE-MIT  MANIFEST.in  README.md  README.rst  meta.yaml  pypi.txt  pyproject.toml  requirements.dev.txt  requirements.opt.txt  requirements.txt  run_all_doctests.sh  run_all_tests.py  run_doctests.sh  setup.py
_old/rHEALPixDGGS-0.3/docs/: README.rst
_old/rHEALPixDGGS-0.3/docs/source/: index.rst
_old/rHEALPixDGGS-0.3/src/: all.tmproj  projections.py  run_all_tests.py
_old/rHEALPixDGGS-0.3/src/tests/: test_grids.py
_old/rHEALPixDGGS-0.4/: README.rst
_old/rHEALPixDGGS-0.4/.doctrees/: introduction.doctree
_old/rHEALPixDGGS-0.4/.doctrees/source/: index.doctree
_old/rHEALPixDGGS-0.4/docs/: Makefile  abstract-dsm2012.txt  grep
_old/rHEALPixDGGS-0.4/docs/.doctrees/: index.doctree
_old/rHEALPixDGGS-0.4/docs/source/: conf.bak.py  conf.py  distortion.rst  ellipsoids.rst  index.rst  projection_tools.rst
_old/rHEALPixDGGS-0.4/src/: pj_healpix.py  pj_zot.py  projection_wrapper.py  run_all_tests.py
_old/rHEALPixDGGS-0.4/src/tests/: centroid.sws  test_distortion.py  test_distortion.sws  test_pj_csea.sws  test_pj_healpix.py  test_pj_rhealpix.py  test_projection_tools.py  test_projection_wrapper.py  test_projection_wrapper.sws
_old/rHEALPixDGGS-0.5/: MANIFEST  README.rst  setup.py
_old/rHEALPixDGGS-0.5/docs/.doctrees/: environment.pickle
_old/rHEALPixDGGS-0.5/docs/source/: conf.py  introduction.rst  latex_macros.sty  projection_wrapper.rst
_old/rHEALPixDGGS-0.5/rhealpix_dggs/: pj_csea.py  pj_healpix.py  pj_isea.py  pj_qsc.py  projection_wrapper.py  rhealpix_dggs.py
_old/rHEALPixDGGS-0.5/rhealpix_dggs/tests/: test_PJ_healpix.c.py  test_distortion.py  test_ellipsoids.py  test_pj_healpix.py
conda/: Makefile  build_package.sh  build_package_local_source.sh  build_package_remote_source.sh  conda_recipe.yaml  meta.yaml  meta_local_source.yaml  meta_remote_source.yaml
docs/: rHEALPixDGGS.aux
docs/source/: conf.py  introduction.rst  pj_healpix.rst  projection_wrapper.rst
rHEALPixDGGS-0.3/docs/: implementing_cell_families.tex
rHEALPixDGGS-0.3/docs/source/: conf.py
rHEALPixDGGS-0.3/src/: grids.py
rHEALPixDGGS-0.3/src/tests/: test_projections.py
rHEALPixDGGS-0.4/.doctrees/: reference_manual.doctree  user_manual.doctree
rHEALPixDGGS-0.4/src/: .coverage  analyze_distortion.py  bug_database.txt  dggs_rhealpix.py  distortion.py  ellipsoids.py  pj_csea.py  pj_isea.py  pj_qsc.py  pj_rhealpix.py  projection_tools.py
rHEALPixDGGS-0.4/src/tests/: test_PJ_healpix.c.py  test_PJ_healpix.c.py.bak  test_dggs_rhealpix.py  test_ellipsoids.py
rHEALPixDGGS-0.5/: CHANGES.rst
rHEALPixDGGS-0.5.1/: CHANGES.rst  LICENSE.rst  MANIFEST  README.rst  run_all_tests.py
rHEALPixDGGS-0.5.1/docs/.doctrees/: modules.doctree
rHEALPixDGGS-0.5.1/docs/source/: conf.py  conf.py.bakk  index.rst
rHEALPixDGGS-0.5.1/rhealpix_dggs/: ellipsoids.py  pj_healpix.py  pj_isea.py  pj_rhealpix.py  pj_zot.py  projection_wrapper.py
rHEALPixDGGS-0.5.1/rhealpix_dggs/tests/: test_PJ_healpix.c.sws  test_PJ_healpix.c_degrees.txt  test_dggs.py  test_dggs.sws  test_distortion.py  test_ellipsoids.py  test_pj_rhealpix.py
rHEALPixDGGS-0.5/docs/.doctrees/: getting_started.doctree
rHEALPixDGGS-0.5/docs/source/: pj_healpix.rst  pj_rhealpix.rst
rHEALPixDGGS-0.5/rhealpix_dggs/: PJ_healpix.c  analyze_distortion.py  distortion.py  ellipsoids.py  pj_rhealpix.py  projection_tools.py  run_all_tests.py
rHEALPixDGGS-0.5/rhealpix_dggs/tests/: test_PJ_healpix.c.txt  test_pj_rhealpix.py  test_projection_tools.py  test_projection_wrapper.py  test_rhealpix_dggs.py
rhealpixdggs/: analyze_distortion.py  cell.py  conversion.py  conversion_utils.py  dggs.py  distortion.py  ellipsoids.py  pj_csea.py  pj_healpix.py  pj_isea.py  pj_qsc.py  pj_rhealpix.py  pj_zot.py  projection_wrapper.py  rhp_wrappers.py  utils.py  wrappers.py
rhealpixdggs/docs/: Makefile  rHEALPixDGGS.aux  rHEALPixDGGS.idx
rhealpixdggs/docs/.doctrees/: scenzgrid_grids.doctree  scenzgrid_projection.doctree  src.doctree
rhealpixdggs/docs/source/: dggs.rst  ellipsoids.rst  index.rst  introduction.rst  pj_rhealpix.rst  projection_wrapper.rst  utils.rst
rhealpixdggs/tests/: test_conversion.py  test_rhp_wrappers.py
tests/: __init__.py  test_PJ_healpix.c.py  test_PJ_healpix.c.py.bak  test_PJ_healpix.c.sws  test_cell.py  test_conversion.py  test_conversion_utils.py  test_dggs.py  test_distortion.py  test_ellipsoids.py  test_pj_healpix.py  test_pj_qsc.sws  test_pj_rhealpix.py  test_projection_wrapper.py  test_rhp_wrappers.py  test_utils.py
